fixed the overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,25 +10,11 @@ header{
 
 }
 
-#main {
-    background-image: url("../images/seaport.jpg");
-    background-size: cover;
-    height: 520px;
-    display: none;
-
-}
-
-
 footer {
     background-color: #00008B;
-    position: absolute;
     clear: both;
-    bottom: 0;
-    width: 100%;
-    height: 25px;
     text-align: center;
     color: white;
-
 
 }
 
@@ -36,15 +22,26 @@ footer {
     padding-left: 60px;
     margin-right: 30px;
     font-size: 18px;
+
 }
 
 #company-name {
     float: left;
+
 }
 
 #phone-number {
     float: right;
     padding-top: 5px;
+
+}
+
+#main {
+    background-image: url("../images/seaport.jpg");
+    background-size: cover;
+    height: 520px;
+    display: none;
+
 }
 
 #mission {
@@ -60,4 +57,5 @@ footer {
 
 #mission h5 {
     line-height: 50px;
+
 }
